--- a/register.html
+++ b/register.html
@@ -2,88 +2,93 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>TitiCraft - Inscription</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Titicraft - Inscription</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #282c34;
-      color: white;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      color: #eee;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
       margin: 0;
     }
-    form {
-      background: #3a3f4b;
+    .container {
+      background: #3b3f47;
       padding: 2rem;
       border-radius: 10px;
+      box-shadow: 0 0 10px #00bfff;
       width: 300px;
-      box-sizing: border-box;
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 1rem;
+      color: #00bfff;
     }
     input {
       width: 100%;
-      padding: 0.8rem;
-      margin-bottom: 1rem;
-      border: none;
+      padding: 10px;
+      margin: 0.5rem 0 1rem;
       border-radius: 5px;
+      border: none;
       font-size: 1rem;
-      box-sizing: border-box;
     }
     button {
-      width: 100%;
-      padding: 0.8rem;
+      background: #00bfff;
       border: none;
-      border-radius: 5px;
-      background: #61dafb;
+      padding: 10px;
+      width: 100%;
+      font-size: 1rem;
+      color: #282c34;
       font-weight: bold;
-      font-size: 1.1rem;
       cursor: pointer;
-      color: black;
+      border-radius: 5px;
       transition: background 0.3s ease;
     }
     button:hover {
-      background: #21a1f1;
-      color: white;
-    }
-    p {
-      margin-top: 1rem;
-      text-align: center;
-    }
-    p a {
-      color: #61dafb;
-      text-decoration: none;
-    }
-    p a:hover {
-      text-decoration: underline;
+      background: #008fc1;
     }
     .error {
       color: #ff6b6b;
       margin-bottom: 1rem;
-      text-align: center;
+    }
+    .link {
+      margin-top: 1rem;
+      display: block;
+      color: #00bfff;
+      text-decoration: none;
+    }
+    .link:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <form id="registerForm">
-    <h2>S'inscrire</h2>
-    <div class="error" id="errorMsg"></div>
-    <input type="text" id="pseudo" placeholder="Pseudo" required />
-    <input type="email" id="email" placeholder="Adresse email" required />
-    <input type="password" id="password" placeholder="Mot de passe" required />
-    <button type="submit">Créer un compte</button>
-    <p>Tu as déjà un compte ? <a href="login.html">Se connecter</a></p>
-  </form>
+  <div class="container">
+    <h1>Inscription Titicraft</h1>
+    <form id="registerForm">
+      <input id="pseudo" type="text" placeholder="Pseudo" required minlength="3" />
+      <input id="email" type="email" placeholder="Adresse email" required />
+      <input id="password" type="password" placeholder="Mot de passe" required minlength="6" />
+      <div class="error" id="errorMsg"></div>
+      <button type="submit">S'inscrire</button>
+    </form>
+    <a class="link" href="login.html">Déjà un compte ? Se connecter</a>
+  </div>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-    import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
+    // Ta config Firebase ici (change par la tienne)
     const firebaseConfig = {
       apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
       authDomain: "message-957c6.firebaseapp.com",
       databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
       projectId: "message-957c6",
-      storageBucket: "message-957c6.appspot.com",
+      storageBucket: "message-957c6.firebasestorage.app",
       messagingSenderId: "518720941529",
       appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
       measurementId: "G-GW0GKGQ9EP"
@@ -91,12 +96,11 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const db = getDatabase(app);
 
     const form = document.getElementById("registerForm");
     const errorMsg = document.getElementById("errorMsg");
 
-    form.addEventListener("submit", async (e) => {
+    form.addEventListener("submit", (e) => {
       e.preventDefault();
       errorMsg.textContent = "";
 
@@ -104,51 +108,41 @@
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
 
-      if(!pseudo || !email || !password){
-        errorMsg.textContent = "Tous les champs sont requis.";
+      if (pseudo.length < 3) {
+        errorMsg.textContent = "Le pseudo doit faire au moins 3 caractères.";
+        return;
+      }
+      if (password.length < 6) {
+        errorMsg.textContent = "Le mot de passe doit faire au moins 6 caractères.";
         return;
       }
 
-      // Vérifier que le pseudo n'existe pas déjà
-      try {
-        const usersRef = ref(db, "users");
-        const snapshot = await get(usersRef);
-        if(snapshot.exists()) {
-          const users = snapshot.val();
-          const pseudoExists = Object.values(users).some(u => u.pseudo.toLowerCase() === pseudo.toLowerCase());
-          if(pseudoExists){
-            errorMsg.textContent = "Ce pseudo est déjà utilisé.";
-            return;
+      createUserWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          // Met à jour le pseudo (displayName)
+          updateProfile(userCredential.user, {
+            displayName: pseudo
+          }).then(() => {
+            alert("Inscription réussie ! Tu peux maintenant te connecter.");
+            window.location.href = "login.html"; // Redirection vers login
+          });
+        })
+        .catch((error) => {
+          // Affiche les erreurs les plus courantes
+          switch (error.code) {
+            case "auth/email-already-in-use":
+              errorMsg.textContent = "Cette adresse email est déjà utilisée.";
+              break;
+            case "auth/invalid-email":
+              errorMsg.textContent = "Adresse email invalide.";
+              break;
+            case "auth/weak-password":
+              errorMsg.textContent = "Le mot de passe est trop faible.";
+              break;
+            default:
+              errorMsg.textContent = error.message;
           }
-        }
-
-        // Créer compte Firebase Auth
-        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-        await updateProfile(user, { displayName: pseudo });
-
-        // Stocker dans la DB user avec 0 diamants
-        await set(ref(db, "users/" + user.uid), {
-          pseudo,
-          email,
-          diamonds: 0
         });
-
-        alert("Compte créé avec succès !");
-        window.location.href = "login.html";
-
-      } catch(error) {
-        // Gérer erreurs communes
-        if(error.code === "auth/email-already-in-use") {
-          errorMsg.textContent = "Cette adresse email est déjà utilisée.";
-        } else if(error.code === "auth/invalid-email") {
-          errorMsg.textContent = "Email invalide.";
-        } else if(error.code === "auth/weak-password") {
-          errorMsg.textContent = "Le mot de passe est trop faible (minimum 6 caractères).";
-        } else {
-          errorMsg.textContent = "Erreur: " + error.message;
-        }
-      }
     });
   </script>
 </body>
