--- a/login.html
+++ b/login.html
@@ -2,75 +2,62 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>TitiCraft - Connexion</title>
+  <title>Connexion - TitiCraft</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #282c34;
-      color: white;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    form {
-      background: #3a3f4b;
-      padding: 2rem;
-      border-radius: 10px;
-      width: 300px;
-      box-sizing: border-box;
-    }
-    input {
-      width: 100%;
-      padding: 0.8rem;
-      margin-bottom: 1rem;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-      box-sizing: border-box;
-    }
-    button {
-      width: 100%;
-      padding: 0.8rem;
-      border: none;
-      border-radius: 5px;
-      background: #61dafb;
-      font-weight: bold;
-      font-size: 1.1rem;
-      cursor: pointer;
-      color: black;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background: #21a1f1;
-      color: white;
-    }
-    p {
-      margin-top: 1rem;
-      text-align: center;
-    }
-    p a {
-      color: #61dafb;
-      text-decoration: none;
-    }
-    p a:hover {
-      text-decoration: underline;
-    }
-    .error {
-      color: #ff6b6b;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
+    body { font-family: Arial, sans-serif; max-width: 400px; margin: auto; padding: 20px; }
+    input, button { width: 100%; padding: 10px; margin: 8px 0; }
+    button { cursor: pointer; }
   </style>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+      authDomain: "message-957c6.firebaseapp.com",
+      databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "message-957c6",
+      storageBucket: "message-957c6.firebasestorage.app",
+      messagingSenderId: "518720941529",
+      appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+      measurementId: "G-GW0GKGQ9EP"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    window.login = () => {
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
+
+      if (!email || !password) {
+        alert("Merci de remplir tous les champs.");
+        return;
+      }
+
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          const user = userCredential.user;
+          if (user.emailVerified) {
+            alert("Connexion réussie !");
+            window.location.href = "home.html";
+          } else {
+            alert("Merci de vérifier ton adresse email avant de te connecter.");
+            signOut(auth);
+          }
+        })
+        .catch((error) => {
+          alert("Erreur : " + error.message);
+        });
+    };
+  </script>
 </head>
 <body>
-  <form id="loginForm">
-    <h2>Se connecter</h2>
-    <div class="error" id="errorMsg"></div>
-    <input type="email" id="email" placeholder="Adresse email" required />
-    <input type="password" id="password" placeholder="Mot de passe" required />
-    <button type="submit">Connexion</button>
-    <p>Pas encore inscrit ? <a href="register.html">Créer un compte</a></p>
-  </form>
-
-  <script type="module">
-    import { initializeApp } from "
+  <h1>Connexion sur TitiCraft</h1>
+  <input type="email" id="email" placeholder="Adresse email" required />
+  <input type="password" id="password" placeholder="Mot de passe" required />
+  <button onclick="login()">Se connecter</button>
+  <p>Tu n'as pas de compte ? <a href="register.html">Inscription</a></p>
+  <p><a href="reset.html">Mot de passe oublié ?</a></p>
+</body>
+</html>
