--- a/login.html
+++ b/login.html
@@ -3,64 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TitiCraft - Connexion</title>
+  <title>Connexion - TitiCraft</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Connexion</h1>
-    <div id="error" class="error-message"></div>
-    <input type="email" id="email" placeholder="Adresse email" required />
-    <input type="password" id="password" placeholder="Mot de passe" required />
+    <h1>Se connecter</h1>
+    <input type="email" id="email" placeholder="Adresse email" />
+    <input type="password" id="password" placeholder="Mot de passe" />
     <button id="loginBtn">Se connecter</button>
-    <a href="register.html" class="link">Pas encore de compte ? S'inscrire</a>
+    <a href="register.html">Pas encore de compte ? S'inscrire</a>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
-      authDomain: "message-957c6.firebaseapp.com",
-      databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "message-957c6",
-      storageBucket: "message-957c6.appspot.com",
-      messagingSenderId: "518720941529",
-      appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
-      measurementId: "G-GW0GKGQ9EP"
+      // Ta config Firebase ici
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    const errorDiv = document.getElementById('error');
-    const loginBtn = document.getElementById('loginBtn');
-
-    loginBtn.addEventListener('click', () => {
+    document.getElementById('loginBtn').addEventListener('click', () => {
       const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
-
-      errorDiv.textContent = '';
+      const password = document.getElementById('password').value.trim();
 
       if (!email || !password) {
-        errorDiv.textContent = "Tous les champs sont obligatoires.";
+        alert("Merci de remplir tous les champs");
         return;
       }
 
       signInWithEmailAndPassword(auth, email, password)
         .then(() => {
-          window.location.href = 'home.html';
+          window.location.href = "home.html";
         })
-        .catch(error => {
-          if (error.code === 'auth/user-not-found') {
-            errorDiv.textContent = 'Utilisateur non trouvé.';
-          } else if (error.code === 'auth/wrong-password') {
-            errorDiv.textContent = 'Mot de passe incorrect.';
-          } else {
-            errorDiv.textContent = error.message;
-          }
+        .catch((error) => {
+          alert("Email ou mot de passe incorrect");
         });
+    });
+
+    // Si déjà connecté, rediriger automatiquement
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        window.location.href = "home.html";
+      }
     });
   </script>
 </body>
