--- a/register.html
+++ b/register.html
@@ -1,154 +1,154 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Inscription - TitiCraft</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-  body {
-    margin: 0; 
-    background: #121212;
-    color: #eee;
-    font-family: 'Poppins', sans-serif;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    height: 100vh;
-  }
-  .container {
-    background: #1f1f1f;
-    padding: 40px 50px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px #0af;
-    width: 350px;
-    position: relative;
-  }
-  h1 {
-    margin-bottom: 30px;
-    font-weight: 700;
-    text-align: center;
-    color: #0af;
-  }
-  label {
-    display: block;
-    margin-bottom: 6px;
-    font-weight: 600;
-    color: #9acfff;
-  }
-  input[type="text"], input[type="email"], input[type="password"] {
-    width: 100%;
-    padding: 10px 15px;
-    margin-bottom: 25px;
-    border-radius: 6px;
-    border: none;
-    background: #333;
-    color: #eee;
-    font-size: 15px;
-    outline: none;
-    transition: background 0.3s;
-  }
-  input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus {
-    background: #2a2a2a;
-  }
-  button {
-    width: 100%;
-    padding: 12px 0;
-    background: #0af;
-    border: none;
-    border-radius: 8px;
-    color: #121212;
-    font-weight: 700;
-    font-size: 17px;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
-  button:hover {
-    background: #07a;
-  }
-  .help-circle {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background: #0af;
-    color: #121212;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    font-weight: 700;
-    font-size: 22px;
-    text-align: center;
-    line-height: 30px;
-    cursor: pointer;
-    user-select: none;
-  }
-  .help-message {
-    display: none;
-    background: #333;
-    color: #9acfff;
-    padding: 10px;
-    border-radius: 8px;
-    font-size: 13px;
-    margin-top: 10px;
-    text-align: center;
-  }
-  .help-circle.active + .help-message {
-    display: block;
-  }
-  .bottom-text {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 14px;
-    color: #666;
-  }
-  .bottom-text a {
-    color: #0af;
-    text-decoration: none;
-    font-weight: 600;
-  }
-  .bottom-text a:hover {
-    text-decoration: underline;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>EverFrost - Créer un compte</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #282c34;
+      color: white;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      text-align: center;
+      width: 320px;
+      background: #3a3f4b;
+      padding: 2.5rem 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(33, 161, 241, 0.7);
+      position: relative;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      color: #61dafb;
+    }
+    label {
+      display: block;
+      text-align: left;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+      color: #aad4ff;
+    }
+    input[type="text"], input[type="email"], input[type="password"] {
+      width: 100%;
+      padding: 0.7rem 1rem;
+      margin-bottom: 1.5rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      background: #20252e;
+      color: white;
+      outline: none;
+      box-sizing: border-box;
+      transition: background 0.3s ease;
+    }
+    input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus {
+      background: #2a2f3b;
+      box-shadow: 0 0 8px #61dafb;
+    }
+    button {
+      width: 100%;
+      padding: 1rem;
+      background: #61dafb;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #282c34;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      letter-spacing: 0.05em;
+    }
+    button:hover {
+      background: #21a1f1;
+      color: white;
+    }
+    .help-circle {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      background: #61dafb;
+      color: #282c34;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 32px;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 0 8px #61dafb;
+    }
+    .help-message {
+      display: none;
+      background: #20252e;
+      color: #aad4ff;
+      padding: 1rem;
+      border-radius: 8px;
+      font-size: 0.9rem;
+      margin-top: 0.5rem;
+      text-align: center;
+    }
+    .help-circle.active + .help-message {
+      display: block;
+    }
+    .bottom-text {
+      margin-top: 1.5rem;
+      font-size: 0.95rem;
+      color: #aad4ff;
+    }
+    .bottom-text a {
+      color: #61dafb;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    .bottom-text a:hover {
+      color: #21a1f1;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <div class="help-circle" id="helpBtn">?</div>
+    <div class="help-message" id="helpMsg">Si vous avez perdu votre mot de passe, demandez à Kenzo.</div>
+    
+    <h1>Créer un compte</h1>
 
-<div class="container">
-  <div class="help-circle" id="helpBtn">?</div>
-  <div class="help-message" id="helpMsg">
-    Si vous avez perdu votre mot de passe, demandez à Kenzo.
+    <form id="registerForm">
+      <label for="pseudo">Pseudo</label>
+      <input type="text" id="pseudo" required placeholder="Ton pseudo" />
+
+      <label for="email">Adresse e-mail</label>
+      <input type="email" id="email" required placeholder="exemple@exemple.com" />
+
+      <label for="password">Mot de passe</label>
+      <input type="password" id="password" required placeholder="••••••••" />
+
+      <button type="submit">S'inscrire</button>
+    </form>
+
+    <div class="bottom-text">
+      Déjà inscrit ? <a href="login.html">Se connecter</a>
+    </div>
   </div>
 
-  <h1>Créer un compte</h1>
+  <script>
+    const helpBtn = document.getElementById('helpBtn');
+    helpBtn.addEventListener('click', () => {
+      helpBtn.classList.toggle('active');
+    });
 
-  <form id="registerForm">
-    <label for="pseudo">Pseudo</label>
-    <input type="text" id="pseudo" required placeholder="Ton pseudo" />
-    <label for="email">Adresse e-mail</label>
-    <input type="email" id="email" required placeholder="exemple@exemple.com" />
-    <label for="password">Mot de passe</label>
-    <input type="password" id="password" required placeholder="••••••••" />
-    <button type="submit">S'inscrire</button>
-  </form>
-
-  <div class="bottom-text">
-    Déjà inscrit ? <a href="login.html">Se connecter</a>
-  </div>
-</div>
-
-<script>
-  const helpBtn = document.getElementById('helpBtn');
-  const helpMsg = document.getElementById('helpMsg');
-  helpBtn.addEventListener('click', () => {
-    helpBtn.classList.toggle('active');
-  });
-
-  document.getElementById('registerForm').addEventListener('submit', e => {
-    e.preventDefault();
-    // Ici tu mets ta logique d'inscription Firebase
-    alert("Inscription en cours... (à implémenter)");
-  });
-</script>
-
+    document.getElementById('registerForm').addEventListener('submit', e => {
+      e.preventDefault();
+      // Ici tu peux intégrer l'inscription Firebase
+      alert("Inscription en cours... (à implémenter)");
+    });
+  </script>
 </body>
 </html>
